force-app/main/default/src/objects/HealthCloudGA__ServiceOrchestrationSetting__mdt/HealthCloudGA__ServiceOrchestrationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Sequence of service classes to execute</description>
    <label>Service Orchestration Setting</label>
    <pluralLabel>Service Orchestration Settings</pluralLabel>
</CustomObject>