force-app/main/default/src/objects/HealthCloudGA__ServiceOrchestrationSetting__mdt/fields/HealthCloudGA__IsActive__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>