force-app/main/default/src/objects/HealthCloudGA__ServiceOrchestrationSetting__mdt/fields/HealthCloudGA__ProcessId__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ProcessId__c</fullName>
    <label>Process Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>