force-app/main/default/src/objects/HealthCloudGA__ServiceOrchestrationSetting__mdt/fields/HealthCloudGA__Required__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>