force-app/main/default/src/objects/HealthCloudGA__ServiceOrchestrationSetting__mdt/fields/HealthCloudGA__Step__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Step__c</fullName>
    <label>Step</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>