force-app/main/default/src/objects/HealthCloudGA__ServiceOrchestrationSetting__mdt/fields/HealthCloudGA__StepClass__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StepClass__c</fullName>
    <label>Step Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>